2017-01-07  Sandra Loosemore  <sandra@codesourcery.com>
	gcc/
	* doc/cppdiropts.texi: Merge documentation of -I, -iquote,
	-isystem, and -idirafter.  Copy-edit.
	* doc/cppopts.texi: Copy-edit.  Remove contradiction about 
	default for -ftrack-macro-expansion.  Delete obsolete and 
	badly-formatted implementation details about -fdebug-cpp output.
	* doc/cppwarnopts.texi: Copy-edit.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@244200 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,12 @@
+2017-01-07  Sandra Loosemore  <sandra@codesourcery.com>
+
+	* doc/cppdiropts.texi: Merge documentation of -I, -iquote,
+	-isystem, and -idirafter.  Copy-edit.
+	* doc/cppopts.texi: Copy-edit.  Remove contradiction about 
+	default for -ftrack-macro-expansion.  Delete obsolete and 
+	badly-formatted implementation details about -fdebug-cpp output.
+	* doc/cppwarnopts.texi: Copy-edit.
+
 2017-01-07  David Malcolm  <dmalcolm@redhat.com>
 
 	PR c++/72803
