PR middle-end/77484 	* predict.def (PRED_INDIR_CALL): Set to 86.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@244207 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2017-01-01  Jan Hubicka  <hubicka@ucw.cz>
+
+	PR middle-end/77484
+	* predict.def (PRED_INDIR_CALL): Set to 86.
+
 2017-01-07  Sandra Loosemore  <sandra@codesourcery.com>
 
 	PR preprocessor/54124
