--- a/gcc/c-family/ChangeLog
+++ b/gcc/c-family/ChangeLog
@@ -1,3 +1,8 @@
+2017-01-08  Martin Sebor  <msebor@redhat.com>
+
+	PR middle-end/77708
+	* c.opt (-Wformat-truncation): New option.
+
 2017-01-06  Alexandre Oliva <aoliva@redhat.com>
 
 	* c-pretty-print.c (pp_c_tree_decl_identifier): Convert 16-bit
